# coursera_scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  FILE_MIGRATION.md  GEMINI.md  PLAYLIST_GENERATION.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_DETAILS.md  apply_subtitles.py  compress_all_videos_gpu.py  compression_gpu_log.txt  compression_log.txt  coursera_scraper.py  create_course_navigator.py  create_playlists.py  fix_links.py  fix_notebook_links.py  generate_dashboard.py  main.py  manage_courses.py  pyproject.toml  requirements.txt  summarize_readings.py  translate_captions.py
.claude/: settings.local.json
coursera/: auth.py  browser.py  files.py  scraper.py  utils.py
coursera/extractors/: base.py  common.py  lab.py  quiz.py  reading.py  video.py
examples/: assingmnet_example.html  course_navigator.html  quiz_example.html  video_example.html
