[project]
name = "coursera-scraper"
version = "0.1.0"
description = "Download all course materials from enrolled Coursera courses and professional certificates"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.32.5",
    "yt-dlp>=2023.11.0",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "google-generativeai>=0.3.0"
]

[project.scripts]
coursera-download = "coursera_scraper:main"
